[gd_scene load_steps=6 format=3 uid="uid://co632kcl0rku5"]

[ext_resource type="Script" uid="uid://o8qf3ftqe8pu" path="res://src/player/player_0.gd" id="1_3u0vk"]
[ext_resource type="PackedScene" uid="uid://dr3uy236lixdv" path="res://scenes/float_actions_gui/float_actions_gui.tscn" id="2_jwvh6"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_gvc0j"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jwvh6"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1m0wy"]

[node name="Player0" type="CharacterBody3D"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
script = ExtResource("1_3u0vk")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_gvc0j")

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0021654, 0)
shape = SubResource("CapsuleShape3D_jwvh6")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_1m0wy")

[node name="PlayerName" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2815225, 0)
billboard = 1
text = "Player Name"
font_size = 42

[node name="float_actions_gui" parent="." node_paths=PackedStringArray("target_node") instance=ExtResource("2_jwvh6")]
visible = false
scale = Vector2(1, 1)
target_node = NodePath("..")
